syntax = "proto3";

option go_package = "./pb";

package auth;

service AuthService {
    rpc Signup(SignupRequest) returns (SignupResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
    rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message Response{
    string message  = 1;
    string data     = 2;
}

message SignupRequest {
    string FirstName = 1;
    string LastName = 2;
    string Email = 3;
    string Password = 4;
    string MobileNumber = 5;
    string Address = 6;
    string City = 7;
    string State = 8;
    string Country = 9;
    string ZipCode = 10;
    string ProfileImage = 11;
}

message SignupResponse {
    string Message = 1;
    UpdateUserRequest data = 3;
    string Token = 2;
}

message LoginRequest {
    string Email = 1;
    string Password = 2;
}

message LoginResponse {
    string Message = 1;
    string Token = 2;
}

message UpdateUserRequest {
    string UserID       = 1;
    string FirstName    = 2;
    string LastName     = 3;
    string Email        = 4;
    string Password     = 5;
    string MobileNumber = 6;
    string Address      = 7;
    string City         = 8;
    string State        = 9;
    string Country      = 10;
    string ZipCode      = 11;
    string ProfileImage = 12;
}

message UpdateUserResponse {
    Response message    = 1;
    
}

message ChangePasswordRequest {
    string Email                = 1;
    string OldPassword          = 2;
    string PasswordResetToken   = 4;
    string NewPassword          = 5;
}

message ChangePasswordResponse {
    Response Message    = 1;
}

message DeleteUserRequest {
    string Email    = 1;
    string Password = 2;
}

message DeleteUserResponse {
    Response Message    = 1;
}

message UserDetails {
    string UserID       = 1;
    string FirstName    = 2;
    string LastName     = 3;
    string Email        = 4;
    string Password     = 5;
    string MobileNumber = 6;
    string Address      = 7;
    string City         = 8;
    string State        = 9;
    string Country      = 10;
    string ZipCode      = 11;
    string ProfileImage = 12; 
}